// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed block transforms to Columns block 1`] = `
"<!-- fp:columns -->
<div class="fp-block-columns"><!-- fp:column {"width":"100%"} -->
<div class="fp-block-column" style="flex-basis:100%"><!-- fp:embed {"url":"https://twitter.com/notnownikki","type":"rich","providerNameSlug":"twitter","responsive":true} -->
<figure class="fp-block-embed is-type-rich is-provider-twitter fp-block-embed-twitter"><div class="fp-block-embed__wrapper">
https://twitter.com/notnownikki
</div></figure>
<!-- /fp:embed --></div>
<!-- /fp:column --></div>
<!-- /fp:columns -->"
`;

exports[`Embed block transforms to Group block 1`] = `
"<!-- fp:group {"layout":{"type":"constrained"}} -->
<div class="fp-block-group"><!-- fp:embed {"url":"https://twitter.com/notnownikki","type":"rich","providerNameSlug":"twitter","responsive":true} -->
<figure class="fp-block-embed is-type-rich is-provider-twitter fp-block-embed-twitter"><div class="fp-block-embed__wrapper">
https://twitter.com/notnownikki
</div></figure>
<!-- /fp:embed --></div>
<!-- /fp:group -->"
`;
